# coremark

./: CMakeLists.txt
barebones/: CMakeLists.txt
posix/: CMakeLists.txt
rtems/: CMakeLists.txt
simple/: CMakeLists.txt
